--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,16 @@
         app:layout_constraintTop_toTopOf="parent"
         android:background="@color/white" />
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:layout_marginVertical="10dp"
+        android:scaleType="fitCenter"
+        android:src="@drawable/textfx"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
     <FrameLayout
         android:id="@+id/home_container"
         android:layout_width="0dp"
