--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -3,14 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/search"
-        android:title="search"
-        android:icon="@drawable/search"
-        app:actionViewClass="android.widget.SearchView"
-        app:showAsAction="ifRoom|collapseActionView"/>
-    <item
         android:id="@+id/menu_cart"
         android:title="Cart"
         android:icon="@drawable/cart2"
         app:showAsAction="always" />
+
+    <item
+        android:id="@+id/map"
+        android:title="map"
+        android:icon="@drawable/map"
+        app:showAsAction="always"/>
+
 </menu>
