--- a/app/src/main/res/layout/my_cart_item.xml
+++ b/app/src/main/res/layout/my_cart_item.xml
@@ -21,6 +21,7 @@
             android:id="@+id/cart_img"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:scaleType="centerCrop"
             android:src="@drawable/milk" />
     </androidx.cardview.widget.CardView>
 
