--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,15 +26,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
-    <androidx.appcompat.widget.SearchView
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:layout_marginHorizontal="25dp"
         android:layout_marginBottom="5dp"
         android:id="@+id/search"
         android:background="@drawable/bg_search_rounded"
-        app:queryBackground="@android:color/transparent"
-        app:iconifiedByDefault="false"
+        android:text="Search for products"
+        android:gravity="center"
+        android:fontFamily="@font/overlock"
         app:layout_constraintTop_toBottomOf="@id/home_toolbar"
         app:layout_constraintBottom_toTopOf="@+id/home_container"
         android:focusable="false"/>
