--- a/app/src/main/res/layout/category_large.xml
+++ b/app/src/main/res/layout/category_large.xml
@@ -3,7 +3,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="160dp"
-    android:layout_height="240dp"
+    android:layout_height="180dp"
     android:layout_margin="15dp"
     app:cardCornerRadius="20dp">
 
@@ -15,8 +15,8 @@
         <ImageView
             android:id="@+id/cat_img"
             android:layout_width="160dp"
-            android:layout_height="180dp"
-            android:scaleType="fitEnd"
+            android:layout_height="140dp"
+            android:scaleType="centerCrop"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
