--- a/app/src/main/res/layout/category_list.xml
+++ b/app/src/main/res/layout/category_list.xml
@@ -19,23 +19,23 @@
             android:layout_height="40dp"
 
             android:layout_marginHorizontal="10dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/cat_name"/>
+            app:layout_constraintEnd_toStartOf="@+id/cat_name"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/cat_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
             android:fontFamily="@font/overlock_bold"
             android:text="Category Name"
             android:textAlignment="center"
             android:textStyle="bold"
-            android:layout_marginRight="10dp"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/cat_img"/>
+            app:layout_constraintStart_toEndOf="@+id/cat_img"
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
