--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.RegistrationActivity"
-    android:background="@drawable/gradient_bg">
+    android:background="@drawable/gradient_bg_pink">
 
     <LinearLayout
         android:id="@+id/sign_up_box"
@@ -26,7 +26,7 @@
             android:text="Sign In"
             android:layout_marginBottom="20dp"
             android:layout_gravity="center"
-            android:textColor="@color/white"
+            android:textColor="@color/dark_pink"
             android:textSize="60sp"/>
 
         <EditText
@@ -92,9 +92,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Don't have an account? "
-                android:textColor="@color/white"
+                android:textColor="@color/black"
                 android:textSize="18sp"
-                android:fontFamily="@font/overlock_bold"/>
+                android:fontFamily="@font/overlock"/>
 
             <TextView
                 android:id="@+id/text_signup"
@@ -102,8 +102,8 @@
                 android:layout_height="wrap_content"
                 android:text="Sign up"
                 android:textSize="20sp"
-                android:textColor="@color/orange"
-                android:fontFamily="@font/overlock_black"/>
+                android:textColor="@color/blue"
+                android:fontFamily="@font/overlock_bold"/>
 
         </LinearLayout>
 
