--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,11 +19,11 @@
 
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:layout_marginVertical="10dp"
+        android:id="@+id/logo"
+        android:layout_width="0dp"
+        android:layout_height="60dp"
         android:scaleType="fitCenter"
-        android:src="@drawable/senox"
+        android:src="@drawable/senologo"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
@@ -32,14 +32,15 @@
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:layout_marginHorizontal="25dp"
+        android:layout_marginTop="10dp"
         android:layout_marginBottom="5dp"
         android:id="@+id/search"
         android:background="@drawable/bg_search_rounded"
         android:text="@string/searchHint"
         android:gravity="center"
         android:fontFamily="@font/overlock"
-        app:layout_constraintTop_toBottomOf="@id/home_toolbar"
-        app:layout_constraintBottom_toTopOf="@+id/home_container"
+        app:layout_constraintTop_toBottomOf="@id/logo"
+        app:layout_constraintBottom_toTopOf="@id/home_container"
         android:focusable="false"/>
 
     <ImageView
