--- a/app/src/main/res/layout/splash_screen.xml
+++ b/app/src/main/res/layout/splash_screen.xml
@@ -10,7 +10,7 @@
         android:layout_height="0dp"
         app:layout_constraintWidth_percent="0.5"
         app:layout_constraintHeight_percent="0.5"
-        android:src="@drawable/logo2"
+        android:src="@drawable/senoxlogo"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
