--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,24 +9,25 @@
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/home_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:background="@color/white">
     </androidx.appcompat.widget.Toolbar>
 
-
-
     <ImageView
         android:id="@+id/logo"
-        android:layout_width="0dp"
+        android:layout_width="60dp"
         android:layout_height="60dp"
+        android:layout_marginVertical="10dp"
         android:scaleType="fitCenter"
-        android:src="@drawable/senologo"
+        android:src="@drawable/logosenos"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
+
 
     <TextView
         android:layout_width="match_parent"
@@ -39,8 +40,8 @@
         android:text="@string/searchHint"
         android:gravity="center"
         android:fontFamily="@font/overlock"
-        app:layout_constraintTop_toBottomOf="@id/logo"
-        app:layout_constraintBottom_toTopOf="@id/home_container"
+        app:layout_constraintTop_toBottomOf="@id/home_toolbar"
+        app:layout_constraintBottom_toTopOf="@+id/home_container"
         android:focusable="false"/>
 
     <ImageView
@@ -48,9 +49,10 @@
         android:layout_height="20dp"
         android:layout_marginBottom="5dp"
         android:layout_marginRight="30dp"
+        android:layout_marginTop="5dp"
         android:scaleType="centerCrop"
-        app:layout_constraintTop_toBottomOf="@id/home_toolbar"
-        app:layout_constraintBottom_toTopOf="@+id/home_container"
+        app:layout_constraintTop_toTopOf="@id/search"
+        app:layout_constraintBottom_toBottomOf="@+id/search"
         app:layout_constraintEnd_toEndOf="parent"
         android:src="@drawable/search"/>
 
