--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -17,7 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="120dp"
             android:layout_gravity="center_horizontal"
-            android:layout_marginHorizontal="25dp"
+            android:layout_marginHorizontal="15dp"
             android:layout_marginBottom="15dp"
             app:cardCornerRadius="10dp">
 
@@ -42,7 +42,7 @@
                     android:id="@+id/shortcut"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="25dp"
+                    android:layout_marginLeft="15dp"
                     android:fontFamily="@font/overlock_bold"
                     android:text="Shortcut"
                     android:textColor="@color/black"
@@ -54,7 +54,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_marginHorizontal="25dp">
+                android:layout_marginHorizontal="15dp">
 
                 <LinearLayout
                     android:id="@+id/sc_cart"
@@ -168,7 +168,7 @@
                     android:id="@+id/category_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="25dp"
+                    android:layout_marginLeft="15dp"
                     android:fontFamily="@font/overlock_black"
                     android:text="Category"
                     android:textColor="@color/black"
@@ -181,10 +181,10 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentBottom="true"
-                    android:layout_marginRight="25dp"
+                    android:layout_marginRight="15dp"
                     android:fontFamily="@font/overlock"
-                    android:textColor="@color/grey"
                     android:text="See all"
+                    android:textColor="@color/grey"
                     android:textSize="16sp"
                     android:textStyle="bold" />
             </RelativeLayout>
@@ -194,7 +194,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="5dp"
-                android:layout_marginHorizontal="20dp"/>
+                android:layout_marginHorizontal="10dp"/>
         </LinearLayout>
 
         <LinearLayout
@@ -211,7 +211,7 @@
                     android:id="@+id/new_product_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="25dp"
+                    android:layout_marginLeft="15dp"
                     android:fontFamily="@font/overlock_black"
                     android:text="New Products"
                     android:textColor="@color/black"
@@ -224,17 +224,17 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentBottom="true"
-                    android:layout_marginRight="25dp"
+                    android:layout_marginRight="15dp"
                     android:fontFamily="@font/overlock"
-                    android:textColor="@color/grey"
                     android:text="See all"
+                    android:textColor="@color/grey"
                     android:textSize="16sp"
                     android:textStyle="bold" />
             </RelativeLayout>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/new_product_rec"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:layout_marginHorizontal="10dp"/>
@@ -254,7 +254,7 @@
                     android:id="@+id/popular_products"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="25dp"
+                    android:layout_marginLeft="15dp"
                     android:fontFamily="@font/overlock_black"
                     android:text="Popular Products"
                     android:textColor="@color/black"
@@ -267,10 +267,10 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentBottom="true"
-                    android:layout_marginRight="25dp"
+                    android:layout_marginRight="15dp"
                     android:fontFamily="@font/overlock"
-                    android:textColor="@color/grey"
                     android:text="See all"
+                    android:textColor="@color/grey"
                     android:textSize="16sp"
                     android:textStyle="bold" />
             </RelativeLayout>
@@ -278,9 +278,9 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/popular_rec"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
 
-                android:layout_marginHorizontal="5dp" />
+                android:layout_marginHorizontal="10dp" />
         </LinearLayout>
 
     </LinearLayout>
