--- a/app/src/main/res/layout/product_large.xml
+++ b/app/src/main/res/layout/product_large.xml
@@ -2,15 +2,14 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="170dp"
+    android:layout_width="match_parent"
     android:layout_height="280dp"
-    android:layout_margin="15dp">
+    android:layout_margin="5dp">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView2"
-        android:layout_width="160dp"
+        android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:layout_margin="5dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -39,7 +38,7 @@
 
     <TextView
         android:id="@+id/new_product_name"
-        android:layout_width="160dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:fontFamily="@font/overlock_black"
@@ -55,7 +54,7 @@
 
     <TextView
         android:id="@+id/new_price"
-        android:layout_width="160dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="@font/overlock_black"
         android:text="34.400đ"
