--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -6,29 +6,20 @@
     android:layout_height="match_parent"
     tools:context=".activities.SearchActivity">
 
-    <androidx.appcompat.widget.SearchView
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/home_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:layout_marginHorizontal="15dp"
-        android:layout_marginVertical="10dp"
-        android:id="@+id/searchProducts"
-        android:background="@drawable/bg_search_rounded"
-        android:inputType="none"
-        android:layoutDirection="rtl"
-        app:defaultQueryHint="@string/searchHint"
-        app:queryBackground="@android:color/transparent"
-        app:iconifiedByDefault="false"
-        app:queryHint="@string/searchHint"
-        app:searchIcon="@drawable/search"
-        app:layout_constraintTop_toTopOf="parent"/>
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@color/white" />
 
     <ListView
         android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/searchProducts"
+        app:layout_constraintTop_toBottomOf="@id/home_toolbar"
         android:layout_margin="10dp"/>
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
