--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -15,11 +15,28 @@
         app:layout_constraintTop_toTopOf="parent"
         android:background="@color/white" />
 
-    <ListView
-        android:id="@+id/listView"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/home_toolbar"
-        android:layout_margin="10dp"/>
+        app:layout_constraintTop_toBottomOf="@id/home_toolbar">
+
+        <ListView
+            android:id="@+id/listView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"/>
+
+        <ImageView
+            android:id="@+id/meme"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:layout_alignTop="@id/listView"
+            android:layout_margin="10dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
+            android:src="@drawable/anyameme" />
+    </RelativeLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
